--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="icon" type="image/png" href="https://yad2.co.il/favicon.ico">
   <title>React App</title>
 </head>
 
